--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "express": "^5.2.1",
-    "pg": "^8.18.0",
+    "axios": "^1.13.5",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
+    "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "pg": "^8.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.x.x" 
+    "react-router-dom": "^6.x.x"
   },
   "devDependencies": {
-    "vite": "^5.x.x",
-    "@vitejs/plugin-react": "^4.x.x",
-    "typescript": "^5.x.x",
-    "@types/react": "^18.x.x",
-    "@types/react-dom": "^18.x.x",
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.3",
-    "@types/pg": "^8.16.0"
+    "@types/pg": "^8.16.0",
+    "@types/react": "^18.x.x",
+    "@types/react-dom": "^18.x.x",
+    "@vitejs/plugin-react": "^4.x.x",
+    "typescript": "^5.x.x",
+    "vite": "^5.x.x"
   }
 }
