--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "pg": "^8.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.x.x"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.x.x",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
